--- a/src/main/resources/templates/inside/quiz1.html
+++ b/src/main/resources/templates/inside/quiz1.html
@@ -229,7 +229,7 @@
         <!-- 1번 문제 -->
         <div th:if="${questionNumber == 1}" class="question-container">
           <img
-            th:src="@{/images/quiz/새봄약국 1단계.jpg}"
+            th:src="@{/images/quiz/새봄약국 1단계.JPG}"
             alt="1번 문제 이미지"
             class="question-image"
           />
@@ -245,7 +245,7 @@
         <!-- 2번 문제 -->
         <div th:if="${questionNumber == 2}" class="question-container">
           <img
-            th:src="@{/images/quiz/새봄약국 2단계.jpg}"
+            th:src="@{/images/quiz/새봄약국 2단계.JPG}"
             alt="2번 문제 이미지"
             class="question-image"
           />
@@ -261,7 +261,7 @@
         <!-- 3번 문제 -->
         <div th:if="${questionNumber == 3}" class="question-container">
           <img
-            th:src="@{/images/quiz/새봄약국 3단계.jpg}"
+            th:src="@{/images/quiz/새봄약국 3단계.JPG}"
             alt="3번 문제 이미지"
             class="question-image"
           />
@@ -277,7 +277,7 @@
         <!-- 4번 문제 -->
         <div th:if="${questionNumber == 4}" class="question-container">
           <img
-            th:src="@{/images/quiz/새봄약국 4단계.jpg}"
+            th:src="@{/images/quiz/새봄약국 4단계.JPG}"
             alt="4번 문제 이미지"
             class="question-image"
           />
@@ -293,7 +293,7 @@
         <!-- 5번 문제 -->
         <div th:if="${questionNumber == 5}" class="question-container">
           <img
-            th:src="@{/images/quiz/새봄약국 5단계.jpg}"
+            th:src="@{/images/quiz/새봄약국 5단계.JPG}"
             alt="5번 문제 이미지"
             class="question-image"
           />
