--- a/src/main/resources/templates/place/main1.html
+++ b/src/main/resources/templates/place/main1.html
@@ -183,41 +183,17 @@
   <body>
     <div class="container">
       <h1>조를 선택하세요</h1>
-      <div class="stage-info" th:text="'스테이지 ' + ${stageNumber}">
-        스테이지 정보
+      <div class="stage-info" th:text="'사업장 ' + ${stageNumber}">
+        사업장 정보
       </div>
 
       <div class="team-container">
-        <a
-          th:href="@{/team{stageNumber}/{teamNumber}(stageNumber=${stageNumber}, teamNumber=1)}"
-          class="team-button"
-          >1조</a
-        >
-        <a
-          th:href="@{/team{stageNumber}/{teamNumber}(stageNumber=${stageNumber}, teamNumber=2)}"
-          class="team-button"
-          >2조</a
-        >
-        <a
-          th:href="@{/team{stageNumber}/{teamNumber}(stageNumber=${stageNumber}, teamNumber=3)}"
-          class="team-button"
-          >3조</a
-        >
-        <a
-          th:href="@{/team{stageNumber}/{teamNumber}(stageNumber=${stageNumber}, teamNumber=4)}"
-          class="team-button"
-          >4조</a
-        >
-        <a
-          th:href="@{/team{stageNumber}/{teamNumber}(stageNumber=${stageNumber}, teamNumber=5)}"
-          class="team-button"
-          >5조</a
-        >
-        <a
-          th:href="@{/team{stageNumber}/{teamNumber}(stageNumber=${stageNumber}, teamNumber=6)}"
-          class="team-button"
-          >6조</a
-        >
+        <a th:href="@{/place/team1/1}" class="team-button">1조</a>
+        <a th:href="@{/place/team1/2}" class="team-button">2조</a>
+        <a th:href="@{/place/team1/3}" class="team-button">3조</a>
+        <a th:href="@{/place/team1/4}" class="team-button">4조</a>
+        <a th:href="@{/place/team1/5}" class="team-button">5조</a>
+        <a th:href="@{/place/team1/6}" class="team-button">6조</a>
       </div>
 
       <div class="footer-info">조를 선택하여 퀴즈를 시작하세요</div>
